Some progress in data processing

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -2,26 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  8.6       -0.        -6.25    ]\n",
+      " [ -8.6       -0.        -6.25    ]\n",
+      " [  8.6      -10.        -6.25    ]\n",
+      " ...\n",
+      " [ -2.526908  -5.088639   6.25    ]\n",
+      " [  3.918603  -4.431913   6.25    ]\n",
+      " [ -3.283615  -5.150998   6.25    ]]\n",
+      "(22323, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to read obj file and compute the number of vertices\n",
     "def read_obj_file(file_path):\n",
     "    vertices = []\n",
-    "\n",
     "    with open(file_path, 'r') as file:\n",
     "        for line in file:\n",
     "            if line.startswith('v '):\n",
@@ -29,12 +41,17 @@
     "                vertex = [float(comp) for comp in components]\n",
     "                vertices.append(vertex)\n",
     "\n",
-    "    return np.array(vertices)"
+    "    return np.array(vertices)\n",
+    "\n",
+    "# Sample\n",
+    "sample_cad_model = read_obj_file(\"/home/hrishi/Programming/Python/CAD-DR/abc-dataset/00030037_0ef34aa1b15748a5b4ad7c0e_trimesh_027.obj\")\n",
+    "print(sample_cad_model)\n",
+    "print(sample_cad_model.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
