--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,15 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import numpy as np\n",
+    "import numpy as np\n",
+    "import steputils.p21 as step\n",
     "\n",
     "torch.set_default_device(\"cuda\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load and preprocess OBJ files (you would need a custom function for this)\n",
     "def load_and_preprocess_obj(file_path):\n",
-    "    # Implement loading and preprocessing of OBJ files here\n",
-    "    # You'll need to extract vertices, faces, and convert them to a suitable format\n",
     "    vertices = []\n",
     "\n",
     "    try:\n",
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load and preprocess your OBJ data\n",
-    "obj_data = load_and_preprocess_obj(\"abc-dataset/00030027_0ef34aa1b15748a5b4ad7c0e_trimesh_017.obj\").T\n",
+    "obj_data = load_and_preprocess_step(\"abc-dataset-obj/00030048_0ef34aa1b15748a5b4ad7c0e_trimesh_038.obj\").T\n",
     "\n",
     "# Define your input dimension and latent dimension\n",
     "input_dim = len(obj_data[0])  # Modify based on your data structure\n",
