--- a/autoencoder-mod.ipynb
+++ b/autoencoder-mod.ipynb
@@ -14,6 +14,7 @@
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "from pyntcloud import PyntCloud"
    ]
   },
@@ -77,15 +78,8 @@
    "source": [
     "directory = \"abc-dataset-ply/\"\n",
     "files = sorted([filename for filename in os.listdir(directory) if os.path.isfile(os.path.join(directory, filename))])\n",
-    "dataset = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataset = []\n",
+    "\n",
     "def convert_to_binvox(path):\n",
     "    point_cloud = np.loadtxt(path, skiprows=12)[:, 0:3]\n",
     "    df = pd.DataFrame(data=point_cloud, columns=['x','y','z'])\n",
@@ -93,15 +87,8 @@
     "    voxelgrid_id = cloud.add_structure(\"voxelgrid\", n_x=64, n_y=64, n_z=64)\n",
     "    voxelgrid = cloud.structures[voxelgrid_id]\n",
     "    Binary_voxel_array = voxelgrid.get_feature_vector(mode=\"binary\")\n",
-    "    dataset.append(Binary_voxel_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    dataset.append(Binary_voxel_array)\n",
+    "\n",
     "for i in files:\n",
     "    path = os.path.join(directory, i)\n",
     "    convert_to_binvox(path)"
@@ -114,45 +101,21 @@
    "outputs": [],
    "source": [
     "train_data = dataset[:35]\n",
-    "test_data = dataset[35:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_data = dataset[35:]\n",
+    "\n",
+    "# Create PyTorch datasets and dataloaders\n",
     "train_dataset = VoxelDataset(train_data)\n",
-    "test_dataset = VoxelDataset(test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_dataset = VoxelDataset(test_data)\n",
+    "\n",
+    "# Determine the device (GPU or CPU)\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Initialize the model, optimizer, and loss function\n",
     "autoencoder = Autoencoder().to(device)\n",
     "optimizer = optim.Adam(autoencoder.parameters(), lr=0.001)\n",
-    "criterion = nn.BCELoss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "criterion = nn.BCELoss()\n",
+    "\n",
+    "# Create data loaders\n",
     "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=4, shuffle=False)"
    ]
@@ -186,6 +149,33 @@
     "    for data in test_loader:\n",
     "        data = data.to(device)  # Move data to the GPU\n",
     "        reconstructed = autoencoder(data.unsqueeze(1).to(device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# Function to visualize 3D voxel data\n",
+    "def plot_voxel(voxel, title):\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    ax.voxels(voxel, facecolors='b', edgecolor='k')\n",
+    "    ax.set_title(title)\n",
+    "    plt.show()\n",
+    "\n",
+    "# Visualize the original and reconstructed voxel grids\n",
+    "for i in range(len(test_data)):\n",
+    "    original_voxel = test_data[i].reshape(64, 64, 64)\n",
+    "    plot_voxel(original_voxel, \"Original Voxel Grid\")\n",
+    "\n",
+    "    reconstructed_voxel = reconstructed[i].squeeze(0).cpu().numpy().reshape(64, 64, 64)\n",
+    "    plot_voxel(reconstructed_voxel, \"Reconstructed Voxel Grid\")\n"
    ]
   }
  ],
