--- a/conversion_utils.ipynb
+++ b/conversion_utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,20 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Unnamed-Part 001.stl', 'Unnamed-Part 002.stl', 'Unnamed-Part 003.stl', 'Unnamed-Part 004.stl', 'Unnamed-Part 005.stl', 'Unnamed-Part 006.stl', 'Unnamed-Part 007.stl', 'Unnamed-Part 008.stl', 'Unnamed-Part 009.stl', 'Unnamed-Part 010.stl', 'Unnamed-Part 011.stl', 'Unnamed-Part 012.stl', 'Unnamed-Part 013.stl', 'Unnamed-Part 014.stl', 'Unnamed-Part 015.stl', 'Unnamed-Part 016.stl', 'Unnamed-Part 017.stl', 'Unnamed-Part 018.stl', 'Unnamed-Part 019.stl', 'Unnamed-Part 020.stl', 'Unnamed-Part 021.stl']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "files = sorted(list_files_in_directory(\"abc-dataset-stl/\"))\n",
-    "print(files)"
+    "files = sorted(list_files_in_directory(\"abc-dataset-stl/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in files:\n",
+    "    path = \"abc-dataset-stl/\" + i\n",
+    "    stl_to_ply(path)"
    ]
   }
  ],
