--- a/autoencoder-torch.ipynb
+++ b/autoencoder-torch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,15 @@
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import matplotlib.pyplot as plt\n",
-    "from pyntcloud import PyntCloud"
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from pyntcloud import PyntCloud\n",
+    "import torch.nn.functional as F\n",
+    "from mayavi import mlab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,32 +40,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Autoencoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Autoencoder, self).__init__()\n",
+    "        \n",
+    "        # Encoder\n",
     "        self.encoder = nn.Sequential(\n",
-    "            nn.Conv3d(1, 32, kernel_size=3, padding=1),\n",
+    "            nn.Conv3d(1, 32, kernel_size=4, stride=2, padding=1),  # Input: 1x64x64x64, Output: 32x32x32x32\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool3d(2, padding=0),\n",
-    "            nn.Conv3d(32, 64, kernel_size=3, padding=1),\n",
+    "            nn.Conv3d(32, 64, kernel_size=4, stride=2, padding=1),  # Output: 64x16x16x16\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool3d(2, padding=0)\n",
+    "            nn.Conv3d(64, 128, kernel_size=4, stride=2, padding=1),  # Output: 128x8x8x8\n",
+    "            nn.ReLU()\n",
     "        )\n",
+    "        \n",
+    "        # Decoder\n",
     "        self.decoder = nn.Sequential(\n",
-    "            nn.Conv3d(64, 64, kernel_size=3, padding=1),\n",
+    "            nn.ConvTranspose3d(128, 64, kernel_size=4, stride=2, padding=1),  # Output: 64x16x16x16\n",
     "            nn.ReLU(),\n",
-    "            nn.Upsample(scale_factor=2),\n",
-    "            nn.Conv3d(64, 32, kernel_size=3, padding=1),\n",
+    "            nn.ConvTranspose3d(64, 32, kernel_size=4, stride=2, padding=1),  # Output: 32x32x32x32\n",
     "            nn.ReLU(),\n",
-    "            nn.Upsample(scale_factor=2),\n",
-    "            nn.Conv3d(32, 1, kernel_size=3, padding=1),\n",
+    "            nn.ConvTranspose3d(32, 1, kernel_size=4, stride=2, padding=1),  # Output: 1x64x64x64\n",
     "            nn.Sigmoid()\n",
     "        )\n",
-    "\n",
+    "    \n",
     "    def forward(self, x):\n",
     "        x = self.encoder(x)\n",
     "        x = self.decoder(x)\n",
@@ -71,21 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "directory = \"abc-dataset-ply/\"\n",
     "files = sorted([filename for filename in os.listdir(directory) if os.path.isfile(os.path.join(directory, filename))])\n",
-    "dataset = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataset = []\n",
+    "\n",
     "def convert_to_binvox(path):\n",
     "    point_cloud = np.loadtxt(path, skiprows=12)[:, 0:3]\n",
     "    df = pd.DataFrame(data=point_cloud, columns=['x','y','z'])\n",
@@ -93,15 +91,8 @@
     "    voxelgrid_id = cloud.add_structure(\"voxelgrid\", n_x=64, n_y=64, n_z=64)\n",
     "    voxelgrid = cloud.structures[voxelgrid_id]\n",
     "    Binary_voxel_array = voxelgrid.get_feature_vector(mode=\"binary\")\n",
-    "    dataset.append(Binary_voxel_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    dataset.append(Binary_voxel_array)\n",
+    "\n",
     "for i in files:\n",
     "    path = os.path.join(directory, i)\n",
     "    convert_to_binvox(path)"
@@ -109,65 +100,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<torch.utils.data.dataloader.DataLoader object at 0x7feb66dd8580>\n"
+     ]
+    }
+   ],
    "source": [
     "train_data = dataset[:35]\n",
-    "test_data = dataset[35:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_data = dataset[35:]\n",
+    "\n",
+    "# Create PyTorch datasets and dataloaders\n",
     "train_dataset = VoxelDataset(train_data)\n",
-    "test_dataset = VoxelDataset(test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_dataset = VoxelDataset(test_data)\n",
+    "\n",
+    "# Determine the device (GPU or CPU)\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Initialize the model, optimizer, and loss function\n",
     "autoencoder = Autoencoder().to(device)\n",
-    "optimizer = optim.Adam(autoencoder.parameters(), lr=0.001)\n",
-    "criterion = nn.BCELoss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(autoencoder.parameters(), lr=0.001)\n",
+    "\n",
+    "# Create data loaders\n",
     "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=4, shuffle=False)"
+    "test_loader = DataLoader(test_dataset, batch_size=4, shuffle=False)\n",
+    "print(train_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Loss: 0.0269\n",
+      "Epoch [2/10], Loss: 0.0224\n",
+      "Epoch [3/10], Loss: 0.0142\n",
+      "Epoch [4/10], Loss: 0.0153\n",
+      "Epoch [5/10], Loss: 0.0261\n",
+      "Epoch [6/10], Loss: 0.0170\n",
+      "Epoch [7/10], Loss: 0.0163\n",
+      "Epoch [8/10], Loss: 0.0144\n",
+      "Epoch [9/10], Loss: 0.0215\n",
+      "Epoch [10/10], Loss: 0.0112\n"
+     ]
+    }
+   ],
    "source": [
     "num_epochs = 10\n",
     "for epoch in range(num_epochs):\n",
     "    for data in train_loader:\n",
     "        optimizer.zero_grad()\n",
-    "        data = data.to(device)  # Move data to the GPU\n",
+    "        data = data.to(device)\n",
     "        outputs = autoencoder(data.unsqueeze(1).to(device))\n",
     "        loss = criterion(outputs, data.unsqueeze(1).to(device))\n",
     "        loss.backward()\n",
@@ -177,15 +170,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reconstructed point cloud saved: reconstructed_point_clouds/reconstructed_point_cloud_0.ply\n",
+      "Reconstructed point cloud saved: reconstructed_point_clouds/reconstructed_point_cloud_1.ply\n"
+     ]
+    }
+   ],
    "source": [
     "autoencoder.eval()\n",
+    "\n",
+    "# Create the \"reconstructed_point_clouds\" folder if it doesn't exist\n",
+    "output_folder = \"reconstructed_point_clouds\"\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
+    "# Use the trained autoencoder to reconstruct the test data\n",
     "with torch.no_grad():\n",
-    "    for data in test_loader:\n",
-    "        data = data.to(device)  # Move data to the GPU\n",
-    "        reconstructed = autoencoder(data.unsqueeze(1).to(device))"
+    "    for i, data in enumerate(test_loader):\n",
+    "        data = data.to(device)\n",
+    "        reconstructed_data = autoencoder(data.unsqueeze(1).to(device)).cpu().numpy().squeeze(1)\n",
+    "\n",
+    "        # Convert the reconstructed binary voxel data to a 3D point cloud\n",
+    "        reconstructed_point_cloud = np.argwhere(reconstructed_data)  # Convert binary voxels to (x, y, z) points\n",
+    "\n",
+    "        # Create a DataFrame with only x, y, and z columns\n",
+    "        df = pd.DataFrame(data=reconstructed_point_cloud)\n",
+    "\n",
+    "        # Save the reconstructed point cloud to a PLY file\n",
+    "        output_path = os.path.join(output_folder, f\"reconstructed_point_cloud_{i}.ply\")\n",
+    "        df.to_csv(output_path, index=False, sep=' ', header=False)\n",
+    "        print(f\"Reconstructed point cloud saved: {output_path}\")"
    ]
   }
  ],
