commit from ubuntu

--- a/autoencoder-torch.ipynb
+++ b/autoencoder-torch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,12 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from pyntcloud import PyntCloud\n",
-    "import torch.nn.functional as F\n",
-    "from mayavi import mlab"
+    "import torch.nn.functional as F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<torch.utils.data.dataloader.DataLoader object at 0x7feb66dd8580>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = dataset[:35]\n",
     "test_data = dataset[35:]\n",
@@ -135,26 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/10], Loss: 0.0269\n",
-      "Epoch [2/10], Loss: 0.0224\n",
-      "Epoch [3/10], Loss: 0.0142\n",
-      "Epoch [4/10], Loss: 0.0153\n",
-      "Epoch [5/10], Loss: 0.0261\n",
-      "Epoch [6/10], Loss: 0.0170\n",
-      "Epoch [7/10], Loss: 0.0163\n",
-      "Epoch [8/10], Loss: 0.0144\n",
-      "Epoch [9/10], Loss: 0.0215\n",
-      "Epoch [10/10], Loss: 0.0112\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_epochs = 10\n",
     "for epoch in range(num_epochs):\n",
@@ -170,18 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reconstructed point cloud saved: reconstructed_point_clouds/reconstructed_point_cloud_0.ply\n",
-      "Reconstructed point cloud saved: reconstructed_point_clouds/reconstructed_point_cloud_1.ply\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "autoencoder.eval()\n",
     "\n",
