--- a/autoencoder-torch.ipynb
+++ b/autoencoder-torch.ipynb
@@ -16,7 +16,8 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from pyntcloud import PyntCloud\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "import open3d as o3d"
    ]
   },
   {
@@ -46,27 +47,30 @@
     "class Autoencoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Autoencoder, self).__init__()\n",
-    "        \n",
+    "\n",
     "        # Encoder\n",
     "        self.encoder = nn.Sequential(\n",
-    "            nn.Conv3d(1, 32, kernel_size=4, stride=2, padding=1),  # Input: 1x64x64x64, Output: 32x32x32x32\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv3d(32, 64, kernel_size=4, stride=2, padding=1),  # Output: 64x16x16x16\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv3d(64, 128, kernel_size=4, stride=2, padding=1),  # Output: 128x8x8x8\n",
-    "            nn.ReLU()\n",
+    "            nn.Conv3d(1, 32, kernel_size=3, padding=1),   # 113x113x113 -> 113x113x113\n",
+    "            nn.ReLU(True),\n",
+    "            nn.MaxPool3d(2, stride=2),                   # 113x113x113 -> 56x56x56\n",
+    "            nn.Conv3d(32, 64, kernel_size=3, padding=1),  # 56x56x56 -> 56x56x56\n",
+    "            nn.ReLU(True),\n",
+    "            nn.MaxPool3d(2, stride=2),                   # 56x56x56 -> 28x28x28\n",
+    "            nn.Conv3d(64, 128, kernel_size=3, padding=1), # 28x28x28 -> 28x28x28\n",
+    "            nn.ReLU(True),\n",
+    "            nn.MaxPool3d(2, stride=2)                    # 28x28x28 -> 14x14x14\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # Decoder\n",
     "        self.decoder = nn.Sequential(\n",
-    "            nn.ConvTranspose3d(128, 64, kernel_size=4, stride=2, padding=1),  # Output: 64x16x16x16\n",
-    "            nn.ReLU(),\n",
-    "            nn.ConvTranspose3d(64, 32, kernel_size=4, stride=2, padding=1),  # Output: 32x32x32x32\n",
-    "            nn.ReLU(),\n",
-    "            nn.ConvTranspose3d(32, 1, kernel_size=4, stride=2, padding=1),  # Output: 1x64x64x64\n",
+    "            nn.ConvTranspose3d(128, 64, kernel_size=3, stride=2), # 14x14x14 -> 28x28x28\n",
+    "            nn.ReLU(True),\n",
+    "            nn.ConvTranspose3d(64, 32, kernel_size=3, stride=2),  # 28x28x28 -> 56x56x56\n",
+    "            nn.ReLU(True),\n",
+    "            nn.ConvTranspose3d(32, 1, kernel_size=3, stride=2),   # 56x56x56 -> 112x112x112\n",
     "            nn.Sigmoid()\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        x = self.encoder(x)\n",
     "        x = self.decoder(x)\n",
@@ -87,7 +91,7 @@
     "    point_cloud = np.loadtxt(path, skiprows=12)[:, 0:3]\n",
     "    df = pd.DataFrame(data=point_cloud, columns=['x','y','z'])\n",
     "    cloud = PyntCloud(df)\n",
-    "    voxelgrid_id = cloud.add_structure(\"voxelgrid\", n_x=64, n_y=64, n_z=64)\n",
+    "    voxelgrid_id = cloud.add_structure(\"voxelgrid\", n_x=119, n_y=119, n_z=119)\n",
     "    voxelgrid = cloud.structures[voxelgrid_id]\n",
     "    Binary_voxel_array = voxelgrid.get_feature_vector(mode=\"binary\")\n",
     "    dataset.append(Binary_voxel_array)\n",
@@ -103,8 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = dataset[:35]\n",
-    "test_data = dataset[35:]\n",
+    "train_data = dataset[:100]\n",
+    "test_data = dataset[100:]\n",
     "\n",
     "# Create PyTorch datasets and dataloaders\n",
     "train_dataset = VoxelDataset(train_data)\n",
@@ -115,13 +119,12 @@
     "\n",
     "# Initialize the model, optimizer, and loss function\n",
     "autoencoder = Autoencoder().to(device)\n",
-    "criterion = nn.MSELoss()\n",
+    "criterion = nn.BCELoss()\n",
     "optimizer = torch.optim.Adam(autoencoder.parameters(), lr=0.001)\n",
     "\n",
     "# Create data loaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=4, shuffle=False)\n",
-    "print(train_loader)"
+    "train_loader = DataLoader(train_dataset, batch_size=3, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=3, shuffle=False)"
    ]
   },
   {
@@ -130,7 +133,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs = 10\n",
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 7\n",
     "for epoch in range(num_epochs):\n",
     "    for data in train_loader:\n",
     "        optimizer.zero_grad()\n",
@@ -140,37 +152,6 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "autoencoder.eval()\n",
-    "\n",
-    "# Create the \"reconstructed_point_clouds\" folder if it doesn't exist\n",
-    "output_folder = \"reconstructed_point_clouds\"\n",
-    "if not os.path.exists(output_folder):\n",
-    "    os.makedirs(output_folder)\n",
-    "\n",
-    "# Use the trained autoencoder to reconstruct the test data\n",
-    "with torch.no_grad():\n",
-    "    for i, data in enumerate(test_loader):\n",
-    "        data = data.to(device)\n",
-    "        reconstructed_data = autoencoder(data.unsqueeze(1).to(device)).cpu().numpy().squeeze(1)\n",
-    "\n",
-    "        # Convert the reconstructed binary voxel data to a 3D point cloud\n",
-    "        reconstructed_point_cloud = np.argwhere(reconstructed_data)  # Convert binary voxels to (x, y, z) points\n",
-    "\n",
-    "        # Create a DataFrame with only x, y, and z columns\n",
-    "        df = pd.DataFrame(data=reconstructed_point_cloud)\n",
-    "\n",
-    "        # Save the reconstructed point cloud to a PLY file\n",
-    "        output_path = os.path.join(output_folder, f\"reconstructed_point_cloud_{i}.ply\")\n",
-    "        df.to_csv(output_path, index=False, sep=' ', header=False)\n",
-    "        print(f\"Reconstructed point cloud saved: {output_path}\")"
    ]
   }
  ],
