tried more complex model in v2

--- a/autoencoder-v2.ipynb
+++ b/autoencoder-v2.ipynb
@@ -94,10 +94,7 @@
     "x = Conv3D(8, (3, 3, 3), activation='relu', padding='same')(x)\n",
     "x = MaxPooling3D((2, 2, 2), padding='same')(x)\n",
     "x = Conv3D(4, (3, 3, 3), activation='relu', padding='same')(x)\n",
-    "x = MaxPooling3D((2, 2, 2), padding='same')(x)\n",
-    "x = Conv3D(2, (3, 3, 3), activation='relu', padding='same')(x)\n",
-    "x = MaxPooling3D((2, 2, 2), padding='same')(x)\n",
-    "encoded = Conv3D(1, (3, 3, 3), activation='relu', padding='same')(x)"
+    "encoded = MaxPooling3D((2, 2, 2), padding='same')(x)"
    ]
   },
   {
@@ -113,12 +110,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = UpSampling3D((2, 2, 2))(encoded)\n",
-    "x = Conv3D(2, (3, 3, 3), activation='relu', padding='same')(x)\n",
-    "x = UpSampling3D((2, 2, 2))(x)\n",
-    "x = Conv3D(4, (3, 3, 3), activation='relu', padding='same')(x)\n",
+    "x = Conv3D(4, (3, 3, 3), activation='relu', padding='same')(encoded)\n",
     "x = UpSampling3D((2, 2, 2))(x)\n",
     "x = Conv3D(8, (3, 3, 3), activation='relu', padding='same')(x)\n",
+    "x = UpSampling3D((2, 2, 2))(x)\n",
+    "x = Conv3D(16, (3, 3, 3), activation='relu', padding='same')(x)\n",
+    "x = UpSampling3D((2, 2, 2))(x)\n",
+    "x = Conv3D(32, (3, 3, 3), activation='relu', padding='same')(x)\n",
     "x = UpSampling3D((2, 2, 2))(x)\n",
     "decoded = Conv3D(1, (3, 3, 3), activation='sigmoid', padding='same')(x)"
    ]
@@ -139,7 +137,7 @@
     "autoencoder = Model(input_data, decoded)\n",
     "autoencoder.compile(optimizer='adam', loss='binary_crossentropy')\n",
     "\n",
-    "autoencoder.fit(train_dataset, train_dataset, epochs=40, batch_size=10, validation_data=(test_dataset, test_dataset))\n",
+    "autoencoder.fit(train_dataset, train_dataset, epochs=60, batch_size=10, validation_data=(test_dataset, test_dataset))\n",
     "reconstructed_data = autoencoder.predict(test_dataset)"
    ]
   },
