--- a/autoencoder-v1.ipynb
+++ b/autoencoder-v1.ipynb
@@ -9,7 +9,9 @@
     "1. 4 layers each in encoder and decoder (2 Conv3d, 2 MaxPooling3D)\n",
     "2. Dataset - 1000 STL files\n",
     "3. Train - 800 models\n",
-    "4. Test - 200 models"
+    "4. Test - 200 models\n",
+    "5. Epochs - 50\n",
+    "6. Loss - 0.0266"
    ]
   },
   {
@@ -429,10 +431,10 @@
     }
    ],
    "source": [
-    "# This will convert the encoded data of each model (which is of shape 8x8x8x8) to a 1D array of 4096 elements\n",
+    "# This will convert the encoded data of each model (which is of shape 16x16x16x16) to a 1D array of 65536 elements\n",
     "encoded_data_flattened = encoded_data[0].flatten()\n",
     "print(\"Shape of encoded data after flattening: \", encoded_data_flattened.shape)\n",
-    "# This will convert the above array of 4096 elements back to the original encoder output of 8x8x8x8 dimensions (4D array)\n",
+    "# This will convert the above array of 65536 elements back to the original encoder output of 8x8x8x8 dimensions (4D array)\n",
     "encoded_regenerated = encoded_data_flattened.reshape(16, 16, 16, 16)\n",
     "print(\"Shape of encoded data after reshaping flattened array format: \", encoded_regenerated.shape)"
    ]
