improvements to v1 in v1.1

--- a/autoencoder-v1.ipynb
+++ b/autoencoder-v1.ipynb
@@ -6,12 +6,18 @@
    "source": [
     "# Autoencoder v1\n",
     "### Information\n",
-    "1. 4 layers each in encoder and decoder (2 Conv3d, 2 MaxPooling3D)\n",
+    "1. Eight-layer architecture (4 in encoder + 4 in decoder)\n",
     "2. Dataset - 1000 STL files\n",
     "3. Train - 800 models\n",
     "4. Test - 200 models\n",
     "5. Epochs - 50\n",
-    "6. Loss - 0.0266"
+    "6. Loss - 0.0266\n",
+    "\n",
+    "### Encoder architecture\n",
+    "- Conv3D(32, (3, 3, 3), activation='relu', padding='same')\n",
+    "- MaxPooling3D((2, 2, 2), padding='same')\n",
+    "- Conv3D(16, (3, 3, 3), activation='relu', padding='same')\n",
+    "- MaxPooling3D((2, 2, 2), padding='same')"
    ]
   },
   {
@@ -44,7 +50,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Converting STL to point cloud\n",
+    "### Converting STL to point cloud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Execute the following cell if you wish to delete all existing point cloud files in abc-dataset-ply/ directory**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = \"abc-dataset-ply/\"\n",
+    "files = os.listdir(folder_path)\n",
+    "\n",
+    "for file in files:\n",
+    "    file_path = os.path.join(folder_path, file)\n",
+    "    if os.path.isfile(file_path):\n",
+    "        try:\n",
+    "            os.remove(file_path)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error deleting {file}: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Only execute the next cell if the point cloud files do not exist in abc-dataset-ply/ directory**"
    ]
   },
@@ -57,7 +94,7 @@
     "files = sorted(ConversionUtils.list_files_in_directory(\"abc-dataset-stl/\"))\n",
     "for i in files:\n",
     "    path = \"abc-dataset-stl/\" + i\n",
-    "    ConversionUtils.stl_to_ply(path)"
+    "    ConversionUtils.stl_to_ply(path, 10000)"
    ]
   },
   {
