--- a/autoencoder-v2.ipynb
+++ b/autoencoder-v2.ipynb
@@ -6,12 +6,20 @@
    "source": [
     "# Autoencoder v2\n",
     "### Information\n",
-    "1. 6 layers each in encoder and decoder (3 Conv3d, 3 MaxPooling3D)\n",
+    "1. Twelve-layer architecture (6 in encoder + 6 in decoder)\n",
     "2. Dataset - 1000 STL files\n",
     "3. Train - 800 models\n",
     "4. Test - 200 models\n",
     "5. Epochs - 100\n",
-    "6. Loss - 0.0361"
+    "6. Loss - 0.0361\n",
+    "\n",
+    "### Encoder architecture\n",
+    "- Conv3D(32, (3, 3, 3), activation='relu', padding='same')\n",
+    "- MaxPooling3D((2, 2, 2), padding='same')\n",
+    "- Conv3D(16, (3, 3, 3), activation='relu', padding='same')\n",
+    "- MaxPooling3D((2, 2, 2), padding='same')\n",
+    "- Conv3D(8, (3, 3, 3), activation='relu', padding='same')\n",
+    "- MaxPooling3D((2, 2, 2), padding='same')"
    ]
   },
   {
@@ -65,7 +73,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Converting STL to point cloud\n",
+    "### Converting STL to point cloud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Execute the following cell if you wish to delete all existing point cloud files in abc-dataset-ply/ directory**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = \"abc-dataset-ply/\"\n",
+    "files = os.listdir(folder_path)\n",
+    "\n",
+    "for file in files:\n",
+    "    file_path = os.path.join(folder_path, file)\n",
+    "    if os.path.isfile(file_path):\n",
+    "        try:\n",
+    "            os.remove(file_path)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error deleting {file}: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Only execute the next cell if the point cloud files do not exist in abc-dataset-ply/ directory**"
    ]
   },
