--- a/autoencoder-v1.1.ipynb
+++ b/autoencoder-v1.1.ipynb
@@ -20,9 +20,9 @@
     "- ReLU replaced with ELU\n",
     "\n",
     "### Encoder architecture\n",
-    "- Conv3D(32, (3, 3, 3), activation='relu', padding='same')\n",
+    "- Conv3D(32, (3, 3, 3), activation='elu', padding='same')\n",
     "- MaxPooling3D((2, 2, 2), padding='same')\n",
-    "- Conv3D(16, (3, 3, 3), activation='relu', padding='same')\n",
+    "- Conv3D(16, (3, 3, 3), activation='elu', padding='same')\n",
     "- MaxPooling3D((2, 2, 2), padding='same')"
    ]
   },
