minor changes to v3 description

--- a/autoencoder-v3.ipynb
+++ b/autoencoder-v3.ipynb
@@ -15,8 +15,13 @@
     "5. Epochs - 50\n",
     "6. Loss - 0.0216\n",
     "\n",
-    "### Changelog\n",
+    "### Encoder architecture\n",
+    "- Conv3D(32, (3, 3, 3), activation='elu', padding='same')\n",
+    "- MaxPooling3D((2, 2, 2), padding='same')\n",
+    "- Conv3D(16, (3, 3, 3), activation='elu', padding='same')\n",
+    "- MaxPooling3D((2, 2, 2), padding='same')\n",
     "\n",
+    "### Changelog\n",
     "#### First attempt\n",
     "- Modified ConversionUtils.py so that the point clouds generated have 15k points instead of 10k\n",
     "- Result: Loss reduced from 0.0266 to 0.0230\n",
@@ -25,13 +30,7 @@
     "- Result: Loss reduced from 0.0230 to 0.0216\n",
     "#### Third attempt\n",
     "- Modified ConversionUtils.py so that the point clouds generated have 20k points instead of 10k\n",
-    "- Result: Loss reduced from 0.0216 to 0.0214\n",
-    "\n",
-    "### Encoder architecture\n",
-    "- Conv3D(32, (3, 3, 3), activation='elu', padding='same')\n",
-    "- MaxPooling3D((2, 2, 2), padding='same')\n",
-    "- Conv3D(16, (3, 3, 3), activation='elu', padding='same')\n",
-    "- MaxPooling3D((2, 2, 2), padding='same')"
+    "- Result: Loss reduced from 0.0216 to 0.0214"
    ]
   },
   {
@@ -577,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
