completed v3, brought down loss to 0.0176

--- a/autoencoder-v1.ipynb
+++ b/autoencoder-v1.ipynb
@@ -117,7 +117,7 @@
     "\n",
     "for i in files:\n",
     "    path = os.path.join(directory, i)\n",
-    "    binvox = ConversionUtils.convert_to_binvox(path)\n",
+    "    binvox = ConversionUtils.convert_to_binvox(path, 64)\n",
     "    dataset.append(binvox)"
    ]
   },
