tried leaky relu

--- a/autoencoder-v3.ipynb
+++ b/autoencoder-v3.ipynb
@@ -29,7 +29,8 @@
     "- Loss reduced from 0.0214 to 0.0192\n",
     "#### Second attempt\n",
     "- Point cloud of 20k points\n",
-    "- Loss reduced from 0.0192 to 0.0176"
+    "- Loss reduced from 0.0192 to 0.0176\n",
+    "- The same setup was run again, but with Leaky ReLU - loss increased to 0.0204, so it was decided to stick to SELU"
    ]
   },
   {
