--- a/autoencoder-v3.ipynb
+++ b/autoencoder-v3.ipynb
@@ -336,6 +336,26 @@
    "source": [
     "Visualization.open3d_visualize_reconstructed(reconstructed_sample)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"sample-outputs/v3/\" + \"reconstructed-\" + str(index) + \".ply\"\n",
+    "o3d.io.write_point_cloud(path, reconstructed_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"sample-outputs/v3/\" + \"reconstructed-\" + str(index) + \".ply\"\n",
+    "o3d.io.write_point_cloud(path, reconstructed_sample)"
+   ]
   }
  ],
  "metadata": {
