retrained v3, changes to model descriptions

--- a/autoencoder-v2.ipynb
+++ b/autoencoder-v2.ipynb
@@ -13,7 +13,9 @@
     "3. Train - 800 models\n",
     "4. Test - 200 models\n",
     "5. Epochs - 50\n",
-    "6. Loss - 0.0205\n",
+    "6. Loss -  \n",
+    "    a. loss - 0.0205  \n",
+    "    b. val_loss - 0.0143\n",
     "\n",
     "### Encoder architecture\n",
     "- Conv3D(32, (3, 3, 3), activation='elu', padding='same')\n",
