--- a/autoencoder-v1.ipynb
+++ b/autoencoder-v1.ipynb
@@ -11,7 +11,9 @@
     "3. Train - 800 models\n",
     "4. Test - 200 models\n",
     "5. Epochs - 50\n",
-    "6. Loss - 0.0227\n",
+    "6. Loss -  \n",
+    "    a. loss - 0.0227  \n",
+    "    b. val_loss - 0.0161\n",
     "\n",
     "### Encoder architecture\n",
     "- Conv3D(32, (3, 3, 3), activation='relu', padding='same')\n",
